content/app/styles/scss/_styles.scss
/********************************
GENERAL STYLES
********************************/
html {
  -webkit-font-smoothing: antialiased;
}

body {
  font-family: $helvetica;
  font-weight: 300;
  -webkit-user-select:none;
  -webkit-text-size-adjust:none;
  line-height: 1;
  background-color: $bg;
}

::-webkit-input-placeholder {
  color: $placehold;
  font-family: $helvetica;
  font-weight: 300;
}

/********************************
RESETS
********************************/
* {
  -webkit-box-sizing: border-box; /* apply a natural box layout model to all elements */
}

input.ui-input-text,
textarea.ui-input-text {
  margin: 0;
  background: #fff !important;
  -webkit-appearance: none; /* disables inner shadows on iOS */
}

.ui-input-search, div.ui-input-text {
  margin: 0 !important;
}

.ui-focus,
.ui-btn:focus {
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none ;
}
input {
    outline: none 0!important;
    -webkit-appearance: none;
    border-radius: 0;
    border: none;
    border-bottom: 1px solid #CACACA;
}

h1, h2, h3, h4, h5, p {
  margin: 0;
  padding: 0;
  line-height: 1.2;
}

ul li {
  padding: 0;
  list-style-type: none;
}

/********************************
HELPER STYLES
********************************/
.clearfix {
  zoom: 1;
  &:before, &:after { content: ""; display: table; }
  &:after { clear: both; }
}

.hide {
  display: none;
}

.hide-hard {
  display: none !important;
}

.block {
  display: block !important;
}

.save {
  font-weight: 500;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.truncate-two {
  overflow : hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.inactive {
  border-bottom: 0 none;
}

/********************************
SCROLL
********************************/
#wrapper {
  position: absolute;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  z-index:  1;
  top:  65px;
  bottom: 65px;
  left: 0;
  width:  100%;
}

#scroller {
  min-height: 100%;
  -webkit-transform: translateZ(0);
  padding: 20px 0;
}

.bottomless {
  bottom: 0 !important;
}

/********************************
LAYOUT
********************************/
.container {
  width: 94%;
  margin: 0 auto;
}

#header {
  position: absolute;
  z-index:9;
  width: 100%;
  top: 0px;
  left: 0px;
  height: 65px;
  background-color: $ui;
  border-bottom: 1px solid $border;
  h1 {
    text-align: center;
    padding-top: 32px;
  }
}

.extended-header {
  height: 110px !important;
}

#footer {
  position: absolute;
  width: 100%;
  bottom: 0px;
  left: 0px;
  height: 65px;
  background-color: $ui;
  border-top: 1px solid $border;
  z-index: 99999999;
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    li {
      display: inline-block;
      width: 24.5%;
      text-align: center;
      color: $light-grey;
      font-size: 14px;
      span {
      }
    }
  }
}


.footer-icon {
  background-color: red;
  margin: 7px auto 5px auto;
  background: url(../images/toolbar-icons.png);
  background-size: 145px 62px;
  background-repeat: no-repeat;
  width: 32px;
  height: 30px;
}

#icon-home { background-position: 2px 0; }
.home-active { background-position: 2px -32px !important;}

#icon-books { background-position: -38px 0; }
.books-active { background-position: -38px -32px !important }

#icon-students { background-position: -76px 0; }
.students-active {background-position: -76px -32px !important; }

#icon-settings { background-position: -118px 1px; }
.settings-active { background-position: -118px -32px !important; }

.back, 
.right-btn{
  color: $red;
  position: absolute;
  top: 36px;
  font-size: 17px;
}

.back {
  left: 10px;
  width: 14px;
  height: 20px;
  background-image: url(../images/back.png);
  background-size: 14px 20px;
  background-repeat: no-repeat;
  padding: 1px 0 0 20px;
}

.right-btn {
  right: 10px;
}


/********************************
TYPOGRAPHY
********************************/
h1 {
  color: $black;
  font-size: 18px;
}

.active {
  color: $red !important;
}

a {
  color: $primary;
  text-decoration: none;
}

/********************************
BUTTONS
********************************/
.button {
  -webkit-border-radius: 5px;
  border-radius: 5px;
  text-align: center;
}

.primary-fill {
  border: 1px solid $primary;
  background-color: $primary;
  color: $white;
}

.secondary-fill {
  border: 1px solid $red;
  background-color: $red;
  color: $white;
}

.primary {
  color: $primary;
  border: 1px solid $primary;
}

.secondary {
  color: $red;
  border: 1px solid $red;
}

.disabled {
  color: $light-grey;
  border: 1px solid $light-grey;
}

/********************************
SIGN UP & LOGIN
********************************/
#signup-view,
#login-view,
#settings-view,
#addstudent-view {
  h2 {
    text-align: center;
    color: $dark-grey;
    margin-bottom: 10px;
  }
  input {
    height: 42px;
    width: 100%;
    font-size: 16px;
  }
}

#login-view {
  h2 {
    margin-top: 20px;
  }
}

.first-input {
  border-top: 1px solid #CACACA;
}

#create-account,
#have-account,
#login,
#login-have-account,
#logout,
#add-student,
#help, 
#save,
#addBook,
#addPhoto,
#change-pass {
  width: 200px;
  padding: 10px 0 12px;
  margin: 0 auto;
  font-size: 16px;
}

#create-account,
#login,
#add-student,
#change-pass,
#save {
  margin-top: 20px;
  margin-bottom: 10px;
}

#logout {
  margin-bottom: 10px;
}

#disclaimer {
  color: $light-grey;
  font-size: 12px;
  text-align: center;
  position: absolute;
  width: 220px;
  left: 50%;
  margin-left: -110px;
  bottom: 5%;
  line-height: 1.6;
}

#forgot {
  margin-top: 20px;
  text-align: center;
  font-size: 12px;
  color: $primary;
}


/********************************
HOME
********************************/
.home {
  padding-top: 100px !important;
}
.check-out, .check-in {
  width: 240px;
  padding: 16px 0;
  margin: 0 auto;
  font-size: 18px;
}

.check-out {
  margin-bottom: 25px;
}

/********************************
ADD BOOK
********************************/
.add-book,
.check {
  width: 90%;
  margin: 0 auto;
  text-align: center;
  padding: 10px !important;
  img {
    height: 190px;
  }
  h2 {
    font-size: 16px;
    font-weight: 500;
    padding-top: 7px;
  }

  h3 {
    font-size: 14px;
    font-weight: 300;
    color: $light-grey;
    padding-top: 5px;
  }

  h4 {
    font-weight: 300;
    color: $light-grey;
    font-size: 13px;
    padding-top: 7px;
  }

  p {
    font-size: 13px;
    font-weight: 500;
    color: $primary;
    padding: 7px 0 15px 0;
  }
}
.ab-btn {
  width: 140px;
  padding: 8px 0 10px 0;
  margin: 0 auto 10px auto;
  font-size: 16px;
}

/********************************
CHECK IN / CHECK OUT
********************************/
.check{
  width: 100%;
  margin: 0 auto;
  padding: 75px 5% 10px 5% !important;
  text-align: left;
  background-color: $ui;
  border-bottom: 1px solid $border;
  img {
    height: 160px;
  }
  .title-art {
    float: left;
  }
  .title-info {
    float: left;
    margin-left: 15px;
  }
  .check-btn {
    width: 120px;
    padding: 8px 0 10px 0;
    font-size: 16px;
  }
}

.name-header {
  width: 90%;
  margin: 0 auto;
  color: $red;
  font-weight: 500;
  text-align: center;
  padding: 10px 0 12px 0;
  border-bottom: 1px solid $border;
}
.check-wrap {
  top: 284px !important;
}
.check-scroller {
  padding: 0 !important; 
}

/********************************
BOOK DETAILS
********************************/
.no-art {
  width: 120px;
  height: 120px;
  margin: 0 auto;
  .no-icon {
    width: 90px;
    height: 87px;
    background-image: url(../images/no-art.png);
    background-size: 90px 87px;
    margin: 0 auto;
    opacity: 0.1;
  }
}


/********************************
BOOK LIST
********************************/
.booklist-wrap {
  top: 90px !important;
}
#filter-wrap {
  border-top: 1px solid $border;
  margin-top: 10px;
  padding-top: 9px;
}
.filter {
  overflow: hidden;
  width: 95%;
  margin: 0 auto;
  font-size: 14px;
  span {
    float: left;
    padding: 5px 0 8px 0;
    text-align: center;
    color: $red;
  }
  #filt-available {
    width: 40%;
    border-top: 1px solid $red;
    border-bottom: 1px solid $red;
  }
  #filt-checked {
    width: 30%;
    border: 1px solid $red;
    -webkit-border-top-right-radius: 5px;
    -webkit-border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;

  }
  #filt-all {
    border: 1px solid $red;
    width: 30%;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    
  }
  .selected {
    background-color: $red;
    color: $white;
  }
}

#booklist {
  width: 92%;
  margin: 0 auto;
  padding-left: 0;
  li {
    border-bottom: 1px solid $border;
    padding: 5px 0;
    overflow: hidden;
    img {
      width: 50px;
      float: left;
    }
    .book-meta {
      float: left;
      margin-left: 20px;
      width: 75%;
      h2 {
        font-size: 14px;
        font-weight: 500;
      }
      h3 {
        font-size: 12px;
        font-weight: 300;
        color: $light-grey;
        padding-top: 4px;
      }
      p {
        font-size: 12px;
        font-weight: 500;
        color: $primary;
        padding-top: 4px;
      }
      .out {
        color: $red;
      }
    }
  }
}

.students {
  padding: 0 !important;
}
#studentlist {
  padding-left: 0;
  margin: 0 auto;
  width: 92%;
  li {
    border-bottom: 1px solid $border;
    padding: 12px 0 14px 0;
    overflow: hidden;
    .first-name {
      font-weight: 500;
      margin-right: 5px;
      float: left;
    }
    .last-name {
      width: 70%;
      float: left;
    }
    .delete-name {
      color: $red;
      text-align: right;
      float: right;
      font-size: 15px;
      padding-top: 1px;
    }
  }
}

